Add train search results view, update table schema and trigger 2

--- a/frontend/src/components/Tickets/ticketSearchResult/ticketSearchResult.component.css
+++ b/frontend/src/components/Tickets/ticketSearchResult/ticketSearchResult.component.css
@@ -1,4 +1,4 @@
-.ts-container {
+/* .ts-container {
   padding: 5%;
   background: linear-gradient(#001529, #00152950);
   height: 100vh;
@@ -42,4 +42,4 @@
   width: 200px;
   height: 50px;
   font-size: 1.5em;
-}
+} */
