Add seats count update block in cancel ticket function

--- a/frontend/src/components/Tickets/book/book.component.css
+++ b/frontend/src/components/Tickets/book/book.component.css
@@ -1,5 +1,28 @@
-.passenger_instance{
-  width: 100%;
+/* .passenger_instance_wrapper{
+  width: 90%;
   display: flex;
+  margin: auto;
+} */
+
+.passenger_instance_wrapper{
+  /* margin: auto; */
+
+  width: 100% !important;
+}
+.passenger_instance_wrapper  .ant-space-item{
+  width: 100% !important;
+  text-align: center;
+}
+
+.passenger_instance_wrapper{
+  display: grid;
+  grid-template-columns: 5fr 3fr 4fr 1fr;
+}
+.ant-input-number-input-wrap, .ant-input-number-input, .ant-input-number{
+  width: 90% !important;
+}
+.main-wrapper {
+  display: flex;
+  flex-direction: column;
   margin: auto;
 }
