Add logo and change font family

--- a/frontend/src/components/Head/head.component.css
+++ b/frontend/src/components/Head/head.component.css
@@ -6,4 +6,11 @@ header {
 }
 .logo {
   color: white;
+  height: 50px;
+}
+
+@media all and (max-width: 325px){
+  .ant-layout-header{
+    padding: 0 15px;
+  }
 }
