--- a/frontend/src/components/Trains/trains.component.css
+++ b/frontend/src/components/Trains/trains.component.css
@@ -1,38 +1,55 @@
 .train-list-wrapper {
-    /* background: ; */
-    height: 100vh;
-    padding-bottom: 2vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  /* background: ; */
+  height: 100vh;
+  padding-bottom: 2vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 Divider {
   border: 0;
-  clear:both;
-  display:block;
-  width: 96%;               
-  background-color:#FFFF00;
+  clear: both;
+  display: block;
+  width: 96%;
+  background-color: #ffff00;
   height: 1px;
 }
 
 .train-list-wrapper > h1 {
-    padding: 25px;
+  padding: 25px;
 }
 
 .train-list-item {
-    padding: 6px
+  padding: 6px;
 }
 
-
-
 .seats-col {
-    padding: 4vh 0 4vh 0;
+  padding: 4vh 0 4vh 0;
 }
 
 .seats-col-block {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+
+
+.collapse_card_wrapper {
+  margin: 20px 0px !important;
+  background-color: white;
+}
+
+.collapse_card_wrapper .ant-collapse-item {
+  border: none !important;
+}
+.collapse_card_wrapper .ant-descriptions-item-content,
+.collapse_card_wrapper .ant-descriptions-item-label {
+  padding: 8px;
+
+}
+.collapse_card_wrapper .train_instance_card  .ant-descriptions-item-content,
+.collapse_card_wrapper .train_instance_card .ant-descriptions-item-label {
+  padding: 4px;
 }
