--- a/frontend/src/components/Trains/trains.component.css
+++ b/frontend/src/components/Trains/trains.component.css
@@ -44,12 +44,29 @@ Divider {
 .collapse_card_wrapper .ant-collapse-item {
   border: none !important;
 }
-.collapse_card_wrapper .ant-descriptions-item-content,
-.collapse_card_wrapper .ant-descriptions-item-label {
+.collapse_card_wrapper .train_instance_card .ant-descriptions-item-content,
+.collapse_card_wrapper .train_instance_card .ant-descriptions-item-label {
   padding: 8px;
-
 }
 .collapse_card_wrapper .train_instance_card  .ant-descriptions-item-content,
 .collapse_card_wrapper .train_instance_card .ant-descriptions-item-label {
+  padding: 2px;
+}
+
+.collapse_card_wrapper .train_instance_card .ant-card-body{
   padding: 4px;
+  height: fit-content;
+}
+
+.train_instance_card .ant-descriptions-header{
+  margin-bottom: 3px;;
+}
+
+.trains-wrapper{
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+}
+.train_instance_card{
+  width: 100% !important;
 }
