Add form to update query in trains results route

--- a/frontend/src/components/Tickets/book/book.component.css
+++ b/frontend/src/components/Tickets/book/book.component.css
@@ -35,3 +35,8 @@
 .ant-descriptions-item-label{
   font-weight: 600;
 }
+
+.train-desc-wrapper .ant-descriptions-item-content,
+.train-desc-wrapper .ant-descriptions-item-label {
+  padding: 8px;
+}
